# dnsrs

./: .gitignore  Cargo.toml  bacon.toml
src/: lib.rs  main.rs
src/dns/: answer.rs  buffer.rs  lbl_sequence.rs  mod.rs  packet.rs  question.rs  record_type.rs
src/dns/header/: flag.rs  mask.rs  mod.rs
src/utils/: errors.rs
