[package]
name = "dnsrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.0"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["net", "macros", "rt", "rt-multi-thread", "fs", "io-util"] }
