[package]
name = "dnsrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
# anyhow = "1.0.58"
bytes = "1.2.0"
chrono = "0.4.19"
clap = "3.2.16"
color-eyre = "0.6.2"
eyre = "0.6.8"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["net", "macros", "rt", "rt-multi-thread", "fs", "io-util"] }
tracing = { version = "0.1.36", features = ["log", "async-await"] }
